Update to 1.1.5 version

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name":        "josantonius/search-inside",
-    "version":     "1.1.4",
+    "version":     "1.1.5",
     "description": "Easily search text within your pages or blog posts",
     "type": "wordpress-plugin",
     "keywords": [
@@ -30,12 +30,12 @@
     },
     "require": {
         "php": "^5.3 || ^7.0",
-        "eliasis-framework/eliasis" : "^1.0.2",
+        "eliasis-framework/eliasis" : "^1.0.4",
         "Josantonius/Json"          : "^1.1.1",
         "Josantonius/Hook"          : "^1.0.1",
         "Josantonius/WP_Register"   : "^1.0.0",
         "Josantonius/WP_Menu"       : "^1.0.0",
-        "composer/installers"       : "master"
+        "composer/installers"       : "^1.3.0"
     },
     "autoload": {
         "psr-4": {
