--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /lib export-ignore
 /resources export-ignore
+/public/sass export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 CHANGELOG.md export-ignore
