updated to version 1.2.1

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "config": {
-        "preferred-install": "source"
+        "preferred-install": "dist"
     },
     "minimum-stability": "stable",
     "support": {
