--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-    "name":        "josantonius/search-inside",
+    "name": "josantonius/wp-search-inside",
     "description": "Easily search text within your pages or blog posts.",
     "type": "wordpress-plugin",
     "keywords": [
-        "Wordpress", 
-        "Plugin", 
+        "Wordpress",
+        "Plugin",
         "Search",
         "PHP"
     ],
     "license": "GPL-2.0+",
     "authors": [
         {
-            "name":     "Josantonius",
-            "email":    "hello@josantonius.com",
-            "homepage": "https://josantonius.com",
-            "role":     "Developer"
+            "name": "Josantonius",
+            "email": "hello@josantonius.dev",
+            "homepage": "https://josantonius.dev",
+            "role": "Developer"
         }
     ],
     "config": {
@@ -22,20 +22,20 @@
     },
     "minimum-stability": "stable",
     "support": {
-        "issues": "https://github.com/josantonius/search-inside/issues",
-        "forum": "http://stackoverflow.com/tags/search-inside",
-        "source": "https://github.com/josantonius/search-inside"
+        "issues": "https://github.com/josantonius/wp-search-inside/issues",
+        "forum": "http://stackoverflow.com/tags/wp-search-inside",
+        "source": "https://github.com/josantonius/wp-search-inside"
     },
     "require": {
         "php": "^5.3 || ^7.0",
-        "eliasis-framework/eliasis"          : "^1.1.3",
-        "eliasis-framework/complement"       : "^1.1.1",
-        "josantonius/Json"                   : "^1.1.7",
-        "josantonius/Hook"                   : "^1.1.0",
-        "josantonius/WP_Register"            : "^1.0.5",
-        "josantonius/WP_Menu"                : "^1.0.7",
-        "composer/installers"                : "^1.4.0",
-        "eliasis-framework/wp-plugin-rating" : "^1.0.1"
+        "eliasis-framework/eliasis": "^1.1.3",
+        "eliasis-framework/complement": "^1.1.1",
+        "josantonius/Json": "^1.1.7",
+        "josantonius/Hook": "^1.1.0",
+        "josantonius/WP_Register": "^1.0.5",
+        "josantonius/WP_Menu": "^1.0.7",
+        "composer/installers": "^1.4.0",
+        "eliasis-framework/wp-plugin-rating": "^1.0.1"
     },
     "require-dev": {
         "wp-coding-standards/wpcs": "^0.14",
